# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/request.UserAddRequest"
                         }
                     }
                 ],
@@ -56,7 +56,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.CustomClaims"
+                            "$ref": "#/definitions/model.CustomClaims"
                         }
                     }
                 }
@@ -64,7 +64,7 @@
         }
     },
     "definitions": {
-        "models.CustomClaims": {
+        "model.CustomClaims": {
             "type": "object",
             "properties": {
                 "username": {
@@ -72,16 +72,13 @@
                 }
             }
         },
-        "models.User": {
+        "request.UserAddRequest": {
             "type": "object",
             "required": [
                 "password",
                 "username"
             ],
             "properties": {
-                "id": {
-                    "type": "integer"
-                },
                 "password": {
                     "type": "string"
                 },
